# 15gmat

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
notebooks/: Conexion_PostgreSQL.ipynb  Uso_modulo.ipynb
scripts/: .env  insert_postgresql.py
sql/: universidad.sql
src/tests/unit/universidad/: conftest.py  test_estudiante.py  test_helpers.py
src/universidad/: estudiante.py  helpers.py
src/universidad/helpers/: helpers.py
src/universidad/modelos/: asignatura.py  calificacion.py  estudiante.py
src/universidad/servicios/: calificaciones.py
tests/unit/universidad/: conftest.py  test_asignatura.py  test_calificacion.py  test_estudiante.py  test_helpers.py
universidad/: estudiante.py  helpers.py
universidad/modelos/: asignatura.py  calificacion.py  estudiante.py
universidad/servicios/: calificaciones.py
