[metadata]
name = universidad-pkg-eduardozamudio
version = 0.0.1
author = Eduardo Zamudio
author_email = eduardozamudio@gmail.com
description = Prácticas de la asignatura 15GMAT VIU
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eduardozamudio/15gmat
project_urls =
    Bug Tracker = https://github.com/eduardozamudio/15gmat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = universidad
packages = find:
python_requires = >=3.8.12

[options.packages.find]
where = universidad